# Storage

./: Output  Output_Nsample10000  Output_Nsample100000  Output_Nsample1000000  Output_Nsample10000000  Output_Nsample_10000
Code_Parallel_MPI/: CMakeLists.txt  Output  ReadMe  bath_setup.h  density.h  main.cpp  opt_parser.h  propagation.cpp  run  transition_matrix.h
Code_Parallel_MPI_Full/: Output  main.cpp  propagation.h  run
Code_Parallel_Omp/: Input  Output  ReadMe  bath_setup.cpp  density.cpp  main.cpp  run  types.h
Code_Parallel_Omp/Regression_testing/: Variance_abszsum1
Code_Parallel_Omp_Full/: .project  dmatrix.c  main.cpp  opt_parser.cpp  propagation.cpp  transition_matrix.cpp  types.h
Code_Parallel_Omp_Full/Regression_testing/: ExpectedValue_abszsum1
